# FastDemark

./: README.md  create_mask.py  pyproject.toml  run_watermark_removal.py  start_server.sh
fastdemark/: configs.py  model.py  utils.py
